# task-manager-restapi

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: python-ci.yaml
task_manager/: celery.py  settings.py  settings_test.py  urls.py
task_manager/apps/label/: views.py
task_manager/apps/status/: views.py
task_manager/apps/task/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
task_manager/apps/task/migrations/: 0002_alter_task_status.py  0003_alter_task_labels_alter_task_status.py  0004_alter_task_labels.py  0005_task_observer.py
task_manager/apps/user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
task_manager/apps/user/migrations/: 0001_initial.py
task_manager/settings/: __init__.py  test.py
task_manager/tests/: test_label.py  test_status.py  test_task.py  test_user.py
task_manager/tests/fixtures/: tasks.yaml  users.yaml
